welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: type mismatch;
 found   : Int(90)
 required: Boolean
	if (110 >= n >= 90 == true) {
                        ^