welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
	if (110 >= n >= 90 == true) {
		return true
	} else {
		return false
	}
}
